@@ -1,12 +1,12 @@
 DIST libxfce4menu-4.5_pre20070325.tar.bz2 774595 RMD160 574b24a59c6c868f2b6fa314ad3ded83bab93e31 SHA1 18b679be0a22d677b63487455c1a1c0c2d837127 SHA256 12f7dd1485615af89e2cd1d383d0a79295dced027118caea1422e2295a8ec4c7
-EBUILD libxfce4menu-4.5_pre20070325.ebuild 702 RMD160 41635900e0b1eff300a4df28825cf02e4b677fc1 SHA1 8ca740778313d499009d74e6db8e8d5cd125b18a SHA256 7f90664108ef8c7a7f9b885c5eba232332873a06728c7bf0f106fd067891e932
-MD5 7de43f23749671664f495799010080a8 libxfce4menu-4.5_pre20070325.ebuild 702
-RMD160 41635900e0b1eff300a4df28825cf02e4b677fc1 libxfce4menu-4.5_pre20070325.ebuild 702
-SHA256 7f90664108ef8c7a7f9b885c5eba232332873a06728c7bf0f106fd067891e932 libxfce4menu-4.5_pre20070325.ebuild 702
-MISC ChangeLog 383 RMD160 afa4a282a2979efe30161b2536317d9fb37f2c26 SHA1 947972ac114eb6409766ed54e7f8f116c3a71e93 SHA256 afc13218b87b0637f8e0fafd8131f6adc104a4760783edbfc85bc410123867c4
-MD5 8dd226a5602aec8f3136240bc5c09ef4 ChangeLog 383
-RMD160 afa4a282a2979efe30161b2536317d9fb37f2c26 ChangeLog 383
-SHA256 afc13218b87b0637f8e0fafd8131f6adc104a4760783edbfc85bc410123867c4 ChangeLog 383
+EBUILD libxfce4menu-4.5_pre20070325.ebuild 741 RMD160 28143edced5e820a1e2e32e1fa10ff8f60848e92 SHA1 7634718f0144467550bfbd9b25ca32c51ed32011 SHA256 0f390be0e7c30cd5c7ebd5f72125fd3490d915e68a2b005985d84fe9adaff08f
+MD5 00c170d29813efed5b855e0d5c1ddbf6 libxfce4menu-4.5_pre20070325.ebuild 741
+RMD160 28143edced5e820a1e2e32e1fa10ff8f60848e92 libxfce4menu-4.5_pre20070325.ebuild 741
+SHA256 0f390be0e7c30cd5c7ebd5f72125fd3490d915e68a2b005985d84fe9adaff08f libxfce4menu-4.5_pre20070325.ebuild 741
+MISC ChangeLog 506 RMD160 39cdf9edd01369141cfcecec7cefb03280b45132 SHA1 677e6b1c11230c266b3af5c9e6c704f6a6c4f2b0 SHA256 7c2f99e258c0d50181e8818c8a845e477309c534286f28e3946327080254cf92
+MD5 3afd024d3112fa79d945b58907724457 ChangeLog 506
+RMD160 39cdf9edd01369141cfcecec7cefb03280b45132 ChangeLog 506
+SHA256 7c2f99e258c0d50181e8818c8a845e477309c534286f28e3946327080254cf92 ChangeLog 506
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
